cabal-version:      3.0
name:               transformANF
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             kubaneko
maintainer:         kubanek0ondrej@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  TransformANF
    other-modules:    InputIR, OutputIR
    -- other-extensions: Strict
    build-depends:    base ^>=4.17.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite transformANF-test
    import:           warnings
    default-language: Haskell2010
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    build-depends:
        base ^>=4.17.1.0,
        transformANF
